
FEATURE  New platform "Microsoft Windows"

WIP      Add genre and plot to collections. Possibly more metadata also (same as launchers?).

FIX      Fixed searches in launchers.

FIX      Fixed artwork display in ROM Collections (Icon/Fanart/Banner/Poster).

FIX      Fix "launching app not found lnk_launcher_app" error in Windows LNK launchers.


[B]Advanced Emulator Launcher | version 0.9.4 | 16 October 2016[/B]

FEATURE  Create ROM and standalone launchers in addon root. "Categoryless" launchers.

FEATURE  Improve the repairing for Favourite/Collection ROMs once and for all.

FEATURE  Parent/Clone launcher display option when using No-Intro DATs.

FEATURE  [Recently played ROMs] Virtual Launcher. List of ROMs played in reverse chronological
         order.

FEATURE  [Most played ROMs] Virtual Launcher. Histogram of how many times a ROM has been played,
         ordered by the number of times a ROM has been played.

FIX      Fixed loading of No-Intro files.

FIX      Fixed "Edit Launcher" >> "Choose default Assets/Artwork..."

FIX      Fixed "Add new Launcher" context menu in non-Windows platforms.


[B]Advanced Emulator Launcher | version 0.9.3 | 8 October 2016[/B]

FEATURE  LNK ROMs Launcher in Windows.

FEATURE  Rename launcher ROMs JSON file if Launcher name changes.

FEATURE  Favourite/Collection ROMs can be updated with information from parent.

FEATURE  Reorganised all Edit Asset/Artwork context menus.

FEATURE  Reorganised and improved all ROM context menus.

FEATURE  Increased the number of AEL platforms to 50.

FEATURE  Setting options to hide [Fav] and [OK] labels in Launcher/Collection/Favourite ROMs.

FEATURE  Setting options to hide Favourites and ROM Collections.

FEATURE  ROM Collections can be imported/exported and shared with other people.

FEATURE  ROMs in a Collection can now be edited.

FEATURE  Move ROMs up/down in collections has been moved from Collection ROM context menu into
         Edit ROM in Collection context menu.
