@@ -52,6 +52,8 @@ FIX      Fixed artwork display in ROM Collections (Icon/Fanart/Banner/Poster).
 
 FIX      Fix "launching app not found lnk_launcher_app" error in Windows LNK launchers.
 
+FIX      Remove setContent() old code.
+
 
 [B]Advanced Emulator Launcher | version 0.9.4 | 16 October 2016[/B]
 
